fixes QA bugs with overlapping opacity elements

--- a/css/style.css
+++ b/css/style.css
@@ -749,7 +749,8 @@ transition: background-image 0.2s ease-in-out;
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
 
-  opacity: 0;
+  /*opacity: 0;*/
+  display: none;
             /*position: relative;*/
             z-index: 1;
 
